@@ -30,4 +30,5 @@ cnb003059138.mrc - Has 2x OCoLC (035 field).
 cnb003238343.mrc - Date of birth before Krist (100 field).
 cnb003369415.mrc - Has weird format of number of pages (300 field).
 cnb003565872.xml - Has cycle (787 field).
+cnb003591924.xml - Slovak edition.
 cnb003633764.xml - Bad ISBN only.
