@@ -1,5 +1,6 @@
 0.26
  - Add book edition cleanup use case.
+ - Fix Slovak Wikidata description, add tests.
 
 0.25 2025-03-19T22:38:02+01:00
  - Add constructor tests for Transform.
